--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <tbody id="contenidoTabla"></tbody>          
         </table>
     </main>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
